tests/compile_fail/missing_enum_into_attribute.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/missing_enum_into_attribute.rs:3:10
  |
3 | #[derive(EnumInto)]
  |          ^^^^^^^^
  |
  = help: message: enum_into attribute with target enum names is required
